Namespace mapping: If no version is determined use mapping immediate